--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
      </div>
 </div> -->
 <div>
+     <div class="modal-fade"></div>
           <app-main-nav>
           </app-main-nav>
      <mat-drawer-container class="left-container">
@@ -14,14 +15,14 @@
                
                <p><button mat-button class="active-but">Dash Board </button></p>
                <p><button mat-button routerLink="/abc-atta"  >ABC ATTA</button></p>
-               <p><button mat-button>Search</button></p>
-               <p><button mat-button>Parmeters</button></p>
+               <!-- <p><button mat-button>Search</button></p>
+               <p><button mat-button>Parmeters</button></p> -->
                <button (click)="salir()">  Salir  </button>
                <!-- <button mat-button color="primary">Primary</button>
                     <button mat-button color="accent">Accent</button> -->
           </mat-drawer>
           <mat-drawer-content class="content animated fadeIn" style="position: relative">
-               <div class="contenedor-prin" style="outline: 10px solid red">
+               <div class="contenedor-prin" >
                     <!-- <div class="content-head">
                               <div class="content-title">
                                    
@@ -38,29 +39,102 @@
                                         <div class="cont-chips-title">
                                              <h2>{{ 'dashboard.titulo' | translate }}</h2>
                                         </div>
-                                        <div class="cont-chips-prin">
-                                             <div class="cont-chips-cont">
-                                                  <mat-form-field class="chip-list">
-                                                       <mat-chip-list #chipList >
-                                                            <mat-chip  *ngIf="varChipIdUser"  [selectable]="selectable"
-                                                                       [removable]="removable" (removed)="removableChipIdUser()">
-                                                            {{ varChipIdUser }}
-                                                            <mat-icon matChipRemove *ngIf="varChipIdUser">cancel</mat-icon>
-                                                            </mat-chip>
-                                                            <mat-chip  *ngIf="varChipStatus"  [selectable]="selectable"
-                                                                      [removable]="removable" (removed)="removableChipStatus()">
-                                                            {{ varChipStatus }}
-                                                            <mat-icon matChipRemove *ngIf="varChipStatus">cancel</mat-icon>
-                                                            </mat-chip>
-                                                       </mat-chip-list>
-                                                  </mat-form-field>   
+                                        <div class="cont-chips-prin" [ngClass]="{'first': isAllSelected() }">
+                                             <div class="cont-tent">
+                                                  <div class="cont-chips-cont">
+                                                       <mat-form-field class="chip-list">
+                                                            <mat-chip-list #chipList >
+                                                                 <mat-chip  *ngIf="varChipIdUser"  [selectable]="selectable"
+                                                                            [removable]="removable" (removed)="removableChipIdUser()">
+                                                                 {{ varChipIdUser }}
+                                                                 <mat-icon matChipRemove *ngIf="varChipIdUser">cancel</mat-icon>
+                                                                 </mat-chip>
+                                                                 <mat-chip  *ngIf="varChipStatus"  [selectable]="selectable"
+                                                                           [removable]="removable" (removed)="removableChipStatus()">
+                                                                 {{ varChipStatus }}
+                                                                 <mat-icon matChipRemove *ngIf="varChipStatus">cancel</mat-icon>
+                                                                 </mat-chip>
+                                                            </mat-chip-list>
+                                                       </mat-form-field>   
+                                                  </div>
+                                                  <div *ngIf="isAllSelected()" class="content-all" >
+                                                       <div class="cont-select-all">
+                                                            
+                                                            
+                                                            <button   mat-button  
+                                                                      matTooltip="Move to Blacklist"
+                                                                      aria-label="Button that displays a tooltip when focused or hovered over">
+                                                                 <mat-icon>flag</mat-icon>
+                                                            </button>
+                                                            
+                                                            
+                                                            <button mat-button [matMenuTriggerFor]="cont">
+                                                                 <mat-icon> contact_mail</mat-icon>
+                                                            </button>
+                                                            <mat-menu #cont="matMenu">
+                                                                 <button mat-menu-item>Item 1</button>
+                                                                 <button mat-menu-item>Item 2</button>
+                                                            </mat-menu>
+
+
+
+                                                            <button mat-button [matMenuTriggerFor]="search">
+                                                                 <mat-icon> youtube_searched_for</mat-icon>
+                                                            </button>
+                                                            <mat-menu #search="matMenu">
+                                                                 <button mat-menu-item>Item 1</button>
+                                                                 <button mat-menu-item>Item 2</button>
+                                                            </mat-menu>
+
+
+                                                            <button mat-button [matMenuTriggerFor]="search">
+                                                                 <mat-icon>ballot</mat-icon>
+                                                            </button>
+                                                            <mat-menu #search="matMenu">
+                                                                 <button mat-menu-item>Item 1</button>
+                                                                 <button mat-menu-item>Item 2</button>
+                                                            </mat-menu>    
+
+                                                       </div>
+                                                  </div>
+
                                              </div>
                                              <div class="cont-chips-button">
                                                   <button mat-button [matMenuTriggerFor]="menu"><mat-icon>more_vert</mat-icon></button>
                                              </div>
                                         </div>
-                                        <mat-menu #menu="matMenu">
-                                             <div class="menu-per"  (click) = "$event.stopPropagation()">
+                                        
+                                        <mat-menu #menu="matMenu" >
+                                             <div (click) = "$event.stopPropagation()" class="content-filtro" >
+                                                  <div class="title-filter">
+                                                       <p>Filters</p>
+                                                  </div>
+                                                  <div class="filters">
+                                                       <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
+                                                            <mat-label>{{filter.name}}</mat-label>
+                                                            <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
+                                                                 (change)="filterChange(filter,$event)">
+                                                                 <option value="">-- Select {{filter.name}} --</option>
+                                                                 <option [value]="item" *ngFor="let item of filter.options">{{item}}</option>
+                                                            </select>
+                                                       </mat-form-field>
+                                                  </div>
+                                                  <div class="filter-button" style="display: flex;
+                                                  justify-content:flex-end">
+                                                            <button mat-raised-button color="primary"
+                                                            (click) = "someMethod()"
+                                                            >Apply Filter</button>
+                                                  </div>
+                                             </div>
+
+                                             <!-- <div class="menu-per"  (click) = "$event.stopPropagation()" style="
+                                             display: flex;
+                                             height: 75px;
+                                             width: 500px;
+                                             min-width: 500px;
+                                             max-width: 500px;
+                                             outline: 1px solid blue;
+                                         ">
                                              <mat-form-field *ngFor="let filter of filterSelectObj" style="margin-left: 15px;">
                                                    <mat-label>Filter {{filter.name}}</mat-label>
                                                    <select matNativeControl name="{{filter.columnProp}}" [(ngModel)]="filter.modelValue"
@@ -70,7 +144,7 @@
                                                    </select>
                                                  </mat-form-field>
 
-                                             </div>          
+                                             </div>           -->
                                         </mat-menu>
 
 
@@ -78,7 +152,7 @@
                                        <!-- <button mat-flat-button color="warn" (click)="resetFilters()">Reset</button> -->
                                    </div>
                                      
-                                   <table mat-table [dataSource]="dataSource" matSort>
+                                   <mat-table [dataSource]="dataSource" matSort>
                                    
                                        <ng-container matColumnDef="select">
                                            <mat-header-cell *matHeaderCellDef>
@@ -90,17 +164,17 @@
                                            <mat-cell *matCellDef="let row">
                                              <mat-checkbox (click)="$event.stopPropagation()"
                                                            (change)="$event ? selection.toggle(row) : null"
-                                                           [checked]="selection.isSelected(row)">
+                                                           [checked]="selection.isSelected(row)"  [disabled]="true">
                                              </mat-checkbox>
                                            </mat-cell>
                                        </ng-container>
                                        <ng-container matColumnDef="name" >
-                                         <mat-header-cell *matHeaderCellDef mat-sort-header> name </mat-header-cell>
+                                         <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                                          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
                                        </ng-container>
                                    
                                      <ng-container matColumnDef="id">
-                                       <mat-header-cell *matHeaderCellDef mat-sort-header> id </mat-header-cell>
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> Recruiter ID </mat-header-cell>
                                        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
                                      </ng-container>
                                    
@@ -129,7 +203,7 @@
                            
                                    
                                      <ng-container matColumnDef="status">
-                                       <mat-header-cell *matHeaderCellDef mat-sort-header> status </mat-header-cell>
+                                       <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                                        <mat-cell *matCellDef="let element" > {{element.status}} </mat-cell>
                                      </ng-container>
                            
@@ -137,13 +211,13 @@
                                          <mat-header-cell *matHeaderCellDef> Options </mat-header-cell>
                                          <mat-cell *matCellDef="let element">
                                            <!-- <button (click)="deleteRecord(element.id)">Delete</button> -->
-                                           <button (click)="editRecord(element.id, 'blacklist')">BLC</button>
+                                           <!-- <button (click)="editRecord(element.id , 'blacklist')">BLC</button>
                                            
-                                           <button (click)="editRecord(element.id, 'contacto')">CNT</button>
+                                           <button (click)="editRecord(element.id, 'contacto')">CNT</button> -->
                                            
-                                           <button (click)="editRecord(element.id, 'reasignar')">REA</button>
+                                           <button mat-button (click)="editRecord(element.id, 'reasignar')"><mat-icon>edit</mat-icon></button>
                                            
-                                           <button (click)="editRecord(element.id, 'status')">STS</button>
+                                           <!-- <button (click)="editRecord(element.id, 'status')">STS</button> -->
                                            
                                          </mat-cell>
                                        </ng-container>
@@ -158,25 +232,29 @@
                                    
                                    
                                      <mat-header-row *matHeaderRowDef="displayedColumns;"></mat-header-row >
-                                     <mat-row *matRowDef="let row; columns: displayedColumns;"(click)="selection.toggle(row)"></mat-row>
+                                     <!-- <mat-row *matRowDef="let row; columns: displayedColumns;"(click)="selection.toggle(row)"></mat-row> -->
+                                     <mat-row *matRowDef="let row; columns: displayedColumns;" ></mat-row>
                                    
-                                   </table>
-                                   
+
+                                        
+
+
+                                   </mat-table>   
                                    
                                    
                                    <!-- <mat-paginator [pageSize]="5" [pageSizeOptions]="[2, 3, 4, 5, 6]">
                                    </mat-paginator> -->
                                    
                            
-                                   <button mat-flat-button color="warn" (click)="sendFileInterrupt()">datos</button>
+                                   <!-- <button mat-flat-button color="warn" (click)="sendFileInterrupt()">datos</button> -->
                                    
                                    
-                                   <pre>
+                                   <!-- <pre>
                                        selection.hasValue(): {{selection.hasValue()}}
                                        isAllSelected(): {{isAllSelected()}}
                                    
                                        {{ selection }}
-                                     </pre>
+                                     </pre> -->
                            </ng-container>
                            
                            
@@ -190,7 +268,7 @@
                </div>
 
 
-               <app-right-navbar [childMessage]="parentMessage" [activeNav]="activeNav"  (seCierra)="cambiar($event)" ></app-right-navbar> 
+               <app-right-navbar [childMessage]="parentMessage" [childTitle]="navTitleChange" [activeNav]="activeNav"  (data)="change_sideBar($event)"></app-right-navbar> 
           </mat-drawer-content>
      </mat-drawer-container>
 </div>
