--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -48,16 +48,16 @@
                                         
                                         
                                         
-                                        <!-- <button mat-raised-button color="primary" class="login" type="submit">Log In</button> -->
+                                        <button mat-raised-button color="primary" class="login" type="submit">Log In</button>
                                         
-                                        <an-button [className]="'success'" type="submit">Log In</an-button>
+                                        <!-- <an-button [className]="'success'" type="submit">Log In</an-button> -->
 
 
 
-                                        <div class="check-link">
-                                             <!-- <mat-checkbox color="primary" class="check-login">Remember me</mat-checkbox> -->
+                                        <!-- <div class="check-link">
+                                             <mat-checkbox color="primary" class="check-login">Remember me</mat-checkbox>
                                               <a class="link" routerLink="/signup">SIGN UP</a>
-                                        </div>
+                                        </div> -->
                                         <!-- <button  mat-raised-button class="btn-linkedIn" type="button">Login with Linked In</button>
                                         <button mat-raised-button class="btn-google" type="button">Login with Google In</button> -->
                          
