--- a/src/app/abc-atta/abc-atta.component.html
+++ b/src/app/abc-atta/abc-atta.component.html
@@ -6,8 +6,8 @@
                    
                     <p><button mat-button routerLink="/dashboard">Dash Board </button></p>
                     <p><button mat-button  class="active-but" >ABC ATTA</button></p>
-                    <p><button mat-button>Search</button></p>
-                    <p><button mat-button>Parmeters</button></p>
+                    <!-- <p><button mat-button>Search</button></p>
+                    <p><button mat-button>Parmeters</button></p> -->
               <!-- <button mat-button color="primary">Primary</button>
               <button mat-button color="accent">Accent</button> -->
                </mat-drawer>
